// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compact Interactive List fixed width list should match a snapshot 1`] = `
<InjectIntl(CompactInteractiveList)
  columns={
    Array [
      Object {
        "displayName": "Col_1",
        "id": "Column-0",
        "minimumWidth": "20px",
        "width": "40px",
      },
      Object {
        "displayName": "Col_2",
        "id": "Column-1",
        "maximumWidth": "300px",
        "width": "200px",
      },
      Object {
        "displayName": "Col_3",
        "id": "Column-2",
        "width": "40px",
      },
    ]
  }
  id="compact-interactive-list-fixed-width"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  rows={
    Array [
      Object {
        "cells": Array [
          Object {
            "content": <IconDocuments
              data-name="Layer 1"
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Discern Care Set (1)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_1",
      },
      Object {
        "cells": Array [
          Object {
            "content": <IconImage
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Initial observation Care/Day High Severity 99220 (2)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_2",
      },
      Object {
        "cells": Array [
          Object {
            "content": <IconImage
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Arterial Sheath Care (3)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_3",
      },
      Object {
        "cells": Array [
          Object {
            "content": " ",
          },
          Object {
            "content": "Sbsq Observation Care/Day High Severity 99226 (4)",
          },
          Object {
            "content": " ",
          },
        ],
        "id": "row_4",
      },
      Object {
        "cells": Array [
          Object {
            "content": <IconImage
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Arterial Sheath Care (5)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_5",
      },
    ]
  }
>
  <CompactInteractiveList
    columns={
      Array [
        Object {
          "displayName": "Col_1",
          "id": "Column-0",
          "minimumWidth": "20px",
          "width": "40px",
        },
        Object {
          "displayName": "Col_2",
          "id": "Column-1",
          "maximumWidth": "300px",
          "width": "200px",
        },
        Object {
          "displayName": "Col_3",
          "id": "Column-2",
          "width": "40px",
        },
      ]
    }
    id="compact-interactive-list-fixed-width"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    numberOfColumns={1}
    rowHeaderIndex={0}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "content": <IconDocuments
                data-name="Layer 1"
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Discern Care Set (1)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_1",
        },
        Object {
          "cells": Array [
            Object {
              "content": <IconImage
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Initial observation Care/Day High Severity 99220 (2)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_2",
        },
        Object {
          "cells": Array [
            Object {
              "content": <IconImage
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Arterial Sheath Care (3)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_3",
        },
        Object {
          "cells": Array [
            Object {
              "content": " ",
            },
            Object {
              "content": "Sbsq Observation Care/Day High Severity 99226 (4)",
            },
            Object {
              "content": " ",
            },
          ],
          "id": "row_4",
        },
        Object {
          "cells": Array [
            Object {
              "content": <IconImage
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Arterial Sheath Care (5)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_5",
        },
      ]
    }
    width="100%"
  >
    <div
      className="compact-interactive-list-container"
    >
      <div
        className="compact-interactive-list"
        id="compact-interactive-list-fixed-width"
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="grid"
        style={
          Object {
            "width": "280px",
          }
        }
        tabIndex={0}
      >
        <div
          aria-rowindex={1}
          className="hidden"
          role="row"
        >
          <span
            key="Column-0"
            role="columnheader"
          >
            Col_1
          </span>
          <span
            key="Column-1"
            role="columnheader"
          >
            Col_2
          </span>
          <span
            key="Column-2"
            role="columnheader"
          >
            Col_3
          </span>
        </div>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconDocuments
                  data-name="Layer 1"
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Discern Care Set (1)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "minimumWidth": 20,
                "width": 40,
              },
              Object {
                "displayName": "Col_2",
                "id": "Column-1",
                "maximumWidth": 300,
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 40,
              },
            ]
          }
          id="row_1"
          isLeftmost={true}
          isResponsive={false}
          isTopmost={true}
          key="row_1"
          numberOfColumns={1}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={0}
          rowMaximumWidth={null}
          rowMinimumWidth={null}
          rowWidth={280}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={2}
            aria-rowindextext="Row 2"
            className="row row-topmost row-leftmost"
            data-row-id="row_1"
            id="row_1"
            role="row"
            style={
              Object {
                "width": "280px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "minimumWidth": 20,
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_1-col-Column-0"
              rowId="row_1"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconDocuments
                  data-name="Layer 1"
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    data-name="Layer 1"
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      data-name="Layer 1"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m41.9 9.9-8.8-8.8A3.12 3.12 0 0 0 30.6 0H14.2A2.56 2.56 0 0 0 12 2v5H7a2.57 2.57 0 0 0-2 2v37a2.24 2.24 0 0 0 2 2h26a2.07 2.07 0 0 0 2-2v-5h6.1a2.06 2.06 0 0 0 1.9-2V12a2.92 2.92 0 0 0-1.1-2.1zM31 3.2l9 8.8h-9zM32 45H8V10h4v29a2.25 2.25 0 0 0 2.1 2H32zm8-7H15V3h13v9a2.77 2.77 0 0 0 3.1 3H40z"
                      />
                    </svg>
                  </IconBase>
                </IconDocuments>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "id": "Column-1",
                  "maximumWidth": 300,
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_1-col-Column-1"
              rowId="row_1"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "200px",
                  }
                }
                tabIndex={-1}
              >
                Discern Care Set (1)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_1-col-Column-2"
              rowId="row_1"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Initial observation Care/Day High Severity 99220 (2)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "minimumWidth": 20,
                "width": 40,
              },
              Object {
                "displayName": "Col_2",
                "id": "Column-1",
                "maximumWidth": 300,
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 40,
              },
            ]
          }
          id="row_2"
          isLeftmost={true}
          isResponsive={false}
          isTopmost={false}
          key="row_2"
          numberOfColumns={1}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={1}
          rowMaximumWidth={null}
          rowMinimumWidth={null}
          rowWidth={280}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={3}
            aria-rowindextext="Row 3"
            className="row row-leftmost"
            data-row-id="row_2"
            id="row_2"
            role="row"
            style={
              Object {
                "width": "280px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "minimumWidth": 20,
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_2-col-Column-0"
              rowId="row_2"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
                      />
                    </svg>
                  </IconBase>
                </IconImage>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "id": "Column-1",
                  "maximumWidth": 300,
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_2-col-Column-1"
              rowId="row_2"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "200px",
                  }
                }
                tabIndex={-1}
              >
                Initial observation Care/Day High Severity 99220 (2)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_2-col-Column-2"
              rowId="row_2"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Arterial Sheath Care (3)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "minimumWidth": 20,
                "width": 40,
              },
              Object {
                "displayName": "Col_2",
                "id": "Column-1",
                "maximumWidth": 300,
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 40,
              },
            ]
          }
          id="row_3"
          isLeftmost={true}
          isResponsive={false}
          isTopmost={false}
          key="row_3"
          numberOfColumns={1}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={2}
          rowMaximumWidth={null}
          rowMinimumWidth={null}
          rowWidth={280}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={4}
            aria-rowindextext="Row 4"
            className="row row-leftmost"
            data-row-id="row_3"
            id="row_3"
            role="row"
            style={
              Object {
                "width": "280px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "minimumWidth": 20,
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_3-col-Column-0"
              rowId="row_3"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
                      />
                    </svg>
                  </IconBase>
                </IconImage>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "id": "Column-1",
                  "maximumWidth": 300,
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_3-col-Column-1"
              rowId="row_3"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "200px",
                  }
                }
                tabIndex={-1}
              >
                Arterial Sheath Care (3)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_3-col-Column-2"
              rowId="row_3"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": " ",
              },
              Object {
                "content": "Sbsq Observation Care/Day High Severity 99226 (4)",
              },
              Object {
                "content": " ",
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "minimumWidth": 20,
                "width": 40,
              },
              Object {
                "displayName": "Col_2",
                "id": "Column-1",
                "maximumWidth": 300,
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 40,
              },
            ]
          }
          id="row_4"
          isLeftmost={true}
          isResponsive={false}
          isTopmost={false}
          key="row_4"
          numberOfColumns={1}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={3}
          rowMaximumWidth={null}
          rowMinimumWidth={null}
          rowWidth={280}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={5}
            aria-rowindextext="Row 5"
            className="row row-leftmost"
            data-row-id="row_4"
            id="row_4"
            role="row"
            style={
              Object {
                "width": "280px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "minimumWidth": 20,
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_4-col-Column-0"
              rowId="row_4"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                 
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "id": "Column-1",
                  "maximumWidth": 300,
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_4-col-Column-1"
              rowId="row_4"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "200px",
                  }
                }
                tabIndex={-1}
              >
                Sbsq Observation Care/Day High Severity 99226 (4)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_4-col-Column-2"
              rowId="row_4"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                 
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Arterial Sheath Care (5)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "minimumWidth": 20,
                "width": 40,
              },
              Object {
                "displayName": "Col_2",
                "id": "Column-1",
                "maximumWidth": 300,
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 40,
              },
            ]
          }
          id="row_5"
          isLeftmost={true}
          isResponsive={false}
          isTopmost={false}
          key="row_5"
          numberOfColumns={1}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={4}
          rowMaximumWidth={null}
          rowMinimumWidth={null}
          rowWidth={280}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={6}
            aria-rowindextext="Row 6"
            className="row row-leftmost"
            data-row-id="row_5"
            id="row_5"
            role="row"
            style={
              Object {
                "width": "280px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "minimumWidth": 20,
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_5-col-Column-0"
              rowId="row_5"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
                      />
                    </svg>
                  </IconBase>
                </IconImage>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "id": "Column-1",
                  "maximumWidth": 300,
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_5-col-Column-1"
              rowId="row_5"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "200px",
                  }
                }
                tabIndex={-1}
              >
                Arterial Sheath Care (5)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 40,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_5-col-Column-2"
              rowId="row_5"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "40px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
      </div>
    </div>
  </CompactInteractiveList>
</InjectIntl(CompactInteractiveList)>
`;

exports[`Compact Interactive List responsive columns should match a snapshot 1`] = `
<InjectIntl(CompactInteractiveList)
  columns={
    Array [
      Object {
        "displayName": "Col_1",
        "id": "Column-0",
        "width": "20px",
      },
      Object {
        "displayName": "Col_2",
        "flexGrow": true,
        "id": "Column-1",
        "width": "200px",
      },
      Object {
        "displayName": "Col_3",
        "id": "Column-2",
        "width": "20px",
      },
    ]
  }
  id="compact-interactive-list-minWidth-calculation"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  numberOfColumns={2}
  rows={
    Array [
      Object {
        "cells": Array [
          Object {
            "content": <IconDocuments
              data-name="Layer 1"
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Discern Care Set (1)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_1",
      },
      Object {
        "cells": Array [
          Object {
            "content": <IconImage
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Initial observation Care/Day High Severity 99220 (2)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_2",
      },
      Object {
        "cells": Array [
          Object {
            "content": <IconImage
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Arterial Sheath Care (3)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_3",
      },
      Object {
        "cells": Array [
          Object {
            "content": " ",
          },
          Object {
            "content": "Sbsq Observation Care/Day High Severity 99226 (4)",
          },
          Object {
            "content": " ",
          },
        ],
        "id": "row_4",
      },
      Object {
        "cells": Array [
          Object {
            "content": <IconImage
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
          Object {
            "content": "Arterial Sheath Care (5)",
          },
          Object {
            "content": <IconFeaturedOutline
              height="1.5em"
              viewBox="0 0 48 48"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            />,
          },
        ],
        "id": "row_5",
      },
    ]
  }
>
  <CompactInteractiveList
    columns={
      Array [
        Object {
          "displayName": "Col_1",
          "id": "Column-0",
          "width": "20px",
        },
        Object {
          "displayName": "Col_2",
          "flexGrow": true,
          "id": "Column-1",
          "width": "200px",
        },
        Object {
          "displayName": "Col_3",
          "id": "Column-2",
          "width": "20px",
        },
      ]
    }
    id="compact-interactive-list-minWidth-calculation"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    numberOfColumns={2}
    rowHeaderIndex={0}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "content": <IconDocuments
                data-name="Layer 1"
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Discern Care Set (1)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_1",
        },
        Object {
          "cells": Array [
            Object {
              "content": <IconImage
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Initial observation Care/Day High Severity 99220 (2)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_2",
        },
        Object {
          "cells": Array [
            Object {
              "content": <IconImage
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Arterial Sheath Care (3)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_3",
        },
        Object {
          "cells": Array [
            Object {
              "content": " ",
            },
            Object {
              "content": "Sbsq Observation Care/Day High Severity 99226 (4)",
            },
            Object {
              "content": " ",
            },
          ],
          "id": "row_4",
        },
        Object {
          "cells": Array [
            Object {
              "content": <IconImage
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
            Object {
              "content": "Arterial Sheath Care (5)",
            },
            Object {
              "content": <IconFeaturedOutline
                height="1.5em"
                viewBox="0 0 48 48"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              />,
            },
          ],
          "id": "row_5",
        },
      ]
    }
    width="100%"
  >
    <div
      className="compact-interactive-list-container"
    >
      <div
        className="compact-interactive-list"
        id="compact-interactive-list-minWidth-calculation"
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="grid"
        style={
          Object {
            "minWidth": "500px",
            "width": "100%",
          }
        }
        tabIndex={0}
      >
        <div
          aria-rowindex={1}
          className="hidden"
          role="row"
        >
          <span
            key="Column-0"
            role="columnheader"
          >
            Col_1
          </span>
          <span
            key="Column-1"
            role="columnheader"
          >
            Col_2
          </span>
          <span
            key="Column-2"
            role="columnheader"
          >
            Col_3
          </span>
        </div>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconDocuments
                  data-name="Layer 1"
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Discern Care Set (1)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "width": 20,
              },
              Object {
                "displayName": "Col_2",
                "flexGrow": true,
                "id": "Column-1",
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 20,
              },
            ]
          }
          id="row_1"
          isLeftmost={true}
          isResponsive={true}
          isTopmost={true}
          key="row_1"
          numberOfColumns={2}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={0}
          rowMaximumWidth={null}
          rowMinimumWidth={100}
          rowWidth={null}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={2}
            aria-rowindextext="Row 2"
            className="row row-topmost row-leftmost"
            data-row-id="row_1"
            id="row_1"
            role="row"
            style={
              Object {
                "flex": "1 1 50%",
                "minWidth": "100px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_1-col-Column-0"
              rowId="row_1"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconDocuments
                  data-name="Layer 1"
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    data-name="Layer 1"
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      data-name="Layer 1"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m41.9 9.9-8.8-8.8A3.12 3.12 0 0 0 30.6 0H14.2A2.56 2.56 0 0 0 12 2v5H7a2.57 2.57 0 0 0-2 2v37a2.24 2.24 0 0 0 2 2h26a2.07 2.07 0 0 0 2-2v-5h6.1a2.06 2.06 0 0 0 1.9-2V12a2.92 2.92 0 0 0-1.1-2.1zM31 3.2l9 8.8h-9zM32 45H8V10h4v29a2.25 2.25 0 0 0 2.1 2H32zm8-7H15V3h13v9a2.77 2.77 0 0 0 3.1 3H40z"
                      />
                    </svg>
                  </IconBase>
                </IconDocuments>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "flexGrow": true,
                  "id": "Column-1",
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_1-col-Column-1"
              rowId="row_1"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "flex": "1 1 200px",
                    "justifyContent": "left",
                    "minWidth": "60px",
                    "textAlign": "left",
                  }
                }
                tabIndex={-1}
              >
                Discern Care Set (1)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_1-col-Column-2"
              rowId="row_1"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": " ",
              },
              Object {
                "content": "Sbsq Observation Care/Day High Severity 99226 (4)",
              },
              Object {
                "content": " ",
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "width": 20,
              },
              Object {
                "displayName": "Col_2",
                "flexGrow": true,
                "id": "Column-1",
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 20,
              },
            ]
          }
          id="row_4"
          isLeftmost={false}
          isResponsive={true}
          isTopmost={true}
          key="row_4"
          numberOfColumns={2}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={3}
          rowMaximumWidth={null}
          rowMinimumWidth={100}
          rowWidth={null}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={5}
            aria-rowindextext="Row 5"
            className="row row-topmost"
            data-row-id="row_4"
            id="row_4"
            role="row"
            style={
              Object {
                "flex": "1 1 50%",
                "minWidth": "100px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_4-col-Column-0"
              rowId="row_4"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                 
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "flexGrow": true,
                  "id": "Column-1",
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_4-col-Column-1"
              rowId="row_4"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "flex": "1 1 200px",
                    "justifyContent": "left",
                    "minWidth": "60px",
                    "textAlign": "left",
                  }
                }
                tabIndex={-1}
              >
                Sbsq Observation Care/Day High Severity 99226 (4)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_4-col-Column-2"
              rowId="row_4"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                 
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Initial observation Care/Day High Severity 99220 (2)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "width": 20,
              },
              Object {
                "displayName": "Col_2",
                "flexGrow": true,
                "id": "Column-1",
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 20,
              },
            ]
          }
          id="row_2"
          isLeftmost={true}
          isResponsive={true}
          isTopmost={false}
          key="row_2"
          numberOfColumns={2}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={1}
          rowMaximumWidth={null}
          rowMinimumWidth={100}
          rowWidth={null}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={3}
            aria-rowindextext="Row 3"
            className="row row-leftmost"
            data-row-id="row_2"
            id="row_2"
            role="row"
            style={
              Object {
                "flex": "1 1 50%",
                "minWidth": "100px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_2-col-Column-0"
              rowId="row_2"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
                      />
                    </svg>
                  </IconBase>
                </IconImage>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "flexGrow": true,
                  "id": "Column-1",
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_2-col-Column-1"
              rowId="row_2"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "flex": "1 1 200px",
                    "justifyContent": "left",
                    "minWidth": "60px",
                    "textAlign": "left",
                  }
                }
                tabIndex={-1}
              >
                Initial observation Care/Day High Severity 99220 (2)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_2-col-Column-2"
              rowId="row_2"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Arterial Sheath Care (5)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "width": 20,
              },
              Object {
                "displayName": "Col_2",
                "flexGrow": true,
                "id": "Column-1",
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 20,
              },
            ]
          }
          id="row_5"
          isLeftmost={false}
          isResponsive={true}
          isTopmost={false}
          key="row_5"
          numberOfColumns={2}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={4}
          rowMaximumWidth={null}
          rowMinimumWidth={100}
          rowWidth={null}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={6}
            aria-rowindextext="Row 6"
            className="row"
            data-row-id="row_5"
            id="row_5"
            role="row"
            style={
              Object {
                "flex": "1 1 50%",
                "minWidth": "100px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_5-col-Column-0"
              rowId="row_5"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
                      />
                    </svg>
                  </IconBase>
                </IconImage>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "flexGrow": true,
                  "id": "Column-1",
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_5-col-Column-1"
              rowId="row_5"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "flex": "1 1 200px",
                    "justifyContent": "left",
                    "minWidth": "60px",
                    "textAlign": "left",
                  }
                }
                tabIndex={-1}
              >
                Arterial Sheath Care (5)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_5-col-Column-2"
              rowId="row_5"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          cells={
            Array [
              Object {
                "content": <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
              Object {
                "content": "Arterial Sheath Care (3)",
              },
              Object {
                "content": <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                />,
              },
            ]
          }
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "width": 20,
              },
              Object {
                "displayName": "Col_2",
                "flexGrow": true,
                "id": "Column-1",
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 20,
              },
            ]
          }
          id="row_3"
          isLeftmost={true}
          isResponsive={true}
          isTopmost={false}
          key="row_3"
          numberOfColumns={2}
          rowHeaderIndex={0}
          rowHeight={null}
          rowIndex={2}
          rowMaximumWidth={null}
          rowMinimumWidth={100}
          rowWidth={null}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={null}
            aria-rowindex={4}
            aria-rowindextext="Row 4"
            className="row row-leftmost"
            data-row-id="row_3"
            id="row_3"
            role="row"
            style={
              Object {
                "flex": "1 1 50%",
                "minWidth": "100px",
              }
            }
          >
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_1",
                  "id": "Column-0",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={true}
              key="row-row_3-col-Column-0"
              rowId="row_3"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="rowheader"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconImage
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
                      />
                    </svg>
                  </IconBase>
                </IconImage>
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_2",
                  "flexGrow": true,
                  "id": "Column-1",
                  "width": 200,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_3-col-Column-1"
              rowId="row_3"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "flex": "1 1 200px",
                    "justifyContent": "left",
                    "minWidth": "60px",
                    "textAlign": "left",
                  }
                }
                tabIndex={-1}
              >
                Arterial Sheath Care (3)
              </div>
            </Memo(Cell)>
            <Memo(Cell)
              column={
                Object {
                  "displayName": "Col_3",
                  "id": "Column-2",
                  "width": 20,
                }
              }
              columnMinimumWidth={60}
              isRowHeader={false}
              key="row-row_3-col-Column-2"
              rowId="row_3"
              setFocusedCell={[Function]}
              widthUnit="px"
            >
              <div
                className="cell"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="gridcell"
                style={
                  Object {
                    "justifyContent": "left",
                    "textAlign": "left",
                    "width": "20px",
                  }
                }
                tabIndex={-1}
              >
                <IconFeaturedOutline
                  height="1.5em"
                  viewBox="0 0 48 48"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    focusable="false"
                    height="1.5em"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon"
                      focusable="false"
                      height="1.5em"
                      role="presentation"
                      viewBox="0 0 48 48"
                      width="1.5em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m24 5.3 5.2 11 .7 1.4 1.6.2 11.9 1.8-8.7 8.9-1.1 1.1.2 1.5 2 12.4-10.4-5.7-1.4-.8-1.4.8-10.4 5.7 2-12.4.2-1.5-1.1-1.1-8.7-8.9L16.5 18l1.6-.2.7-1.4L24 5.3M24 0c-.6 0-1 .4-1.4 1.2L16.1 15 1.6 17.2c-1.1.2-1.6.7-1.6 1.4 0 .4.2.9.7 1.5l10.5 10.7-2.5 15.1c0 .3-.1.5-.1.6 0 .4.1.8.3 1.1.3.3.6.4 1 .4.3 0 .7-.1 1.2-.4l13-7.1 13 7.1c.4.2.8.4 1.2.4.4 0 .7-.1.9-.4.2-.3.3-.7.3-1.1v-.6L37 30.8l10.5-10.7c.5-.5.8-1 .8-1.5 0-.7-.5-1.2-1.6-1.4L31.9 15 25.4 1.2C25 .4 24.6 0 24 0z"
                      />
                    </svg>
                  </IconBase>
                </IconFeaturedOutline>
              </div>
            </Memo(Cell)>
          </div>
        </Memo(Row)>
        <Memo(Row)
          columnMinimumWidth={60}
          columns={
            Array [
              Object {
                "displayName": "Col_1",
                "id": "Column-0",
                "width": 20,
              },
              Object {
                "displayName": "Col_2",
                "flexGrow": true,
                "id": "Column-1",
                "width": 200,
              },
              Object {
                "displayName": "Col_3",
                "id": "Column-2",
                "width": 20,
              },
            ]
          }
          id="placeholder-row-1"
          isLeftmost={false}
          isResponsive={true}
          isTopmost={false}
          key="placeholder-row-1"
          numberOfColumns={2}
          rowHeaderIndex={0}
          rowHeight={null}
          rowMaximumWidth={null}
          rowMinimumWidth={100}
          rowWidth={null}
          setFocusedCell={[Function]}
          widthUnit="px"
        >
          <div
            aria-hidden={true}
            aria-rowindex={NaN}
            aria-rowindextext="Row NaN"
            className="row row-placeholder"
            data-row-id="placeholder-row-1"
            id="placeholder-row-1"
            style={
              Object {
                "flex": "1 1 50%",
                "minWidth": "100px",
              }
            }
          />
        </Memo(Row)>
      </div>
    </div>
  </CompactInteractiveList>
</InjectIntl(CompactInteractiveList)>
`;
